--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -21,21 +21,34 @@
             // height: 100%;
             margin-left: auto;
             margin-right: auto;
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
 
             img {
                 // height: 80vh;
-                // width: auto;
+                width: fit-content;
                 max-height: 60vh;
                 object-fit: contain;
                 overflow: visible;
+
+                margin-left: auto;
+                margin-right: auto;
             }
         }
 
         .video-section {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            flex-direction: column;
+
             video {
-                // width: 100%;
+                width: fit-content;
                 max-height: 80vh;
-                object-fit: cover;
+                // object-fit: cover;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     }
