--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -99,13 +99,15 @@
         text-align: center;
         width: 100%;
         font-weight: bold;
+        
     }
 
     h2 {
         margin-bottom: 1.5rem;
-        font-size: 2.5rem;
+        font-size: 1.5rem;
         // font-weight: bold;
         justify-self: center;
+        
     }
 
     h3 {
@@ -180,12 +182,16 @@
 
     h1.content-title {
         margin-bottom: 1rem;
+        
     }
 
     h2 {
         margin-bottom: 1.5rem;
         font-size: 1rem;
         font-weight: bold;
+        // font-family: PangramRoundedNarrowSemibold;
+        letter-spacing: 1px;
+
     }
 
     h3 {
@@ -199,6 +205,7 @@
         line-height: 2rem;
         margin-bottom: 1rem;
         // white-space: pre;
+        // text-indent: 2rem;
 
         strong {
             font-weight: bold;
@@ -290,10 +297,20 @@
         img,
         video {
             // width: min-content;
-            height: 80vh;
+            height: 80vh !important;
+            width: auto;
             // height: 100%;
             border-radius: 0rem;
             display: inline;
+            object-fit: contain;
+        }
+        
+        .swiper-img{
+            // max-width: 90vw;
+            max-height: 80vh;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
     }
@@ -316,6 +333,14 @@
             // height: max-content;
             border-radius: 0rem;
             display: inline;
+        }
+
+        .swiper-img{
+            max-width: 60vw;
+            max-height: 80vh;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
     }
@@ -384,6 +409,14 @@
         grid-column: 1/13 !important;
     }
 
+    .blog-swiper{    
+        .swiper-slide {
+            .swiper-img{
+                max-width: 95vw;
+            }
+        }
+    }
+
     .swiper {
         height: 100%;
         width: 100%;
@@ -397,9 +430,9 @@
             img,
             video {
                 // width: min-content;
-                // height: 80vh;
-                height: max-content;
-                max-height: max-content;
+                height: 80vh;
+                width: 100% !important;
+                // height: 100%;
                 border-radius: 0rem;
                 display: inline;
             }
@@ -412,9 +445,9 @@
 
         img {
             opacity: 1;
-            width: 40px;
-            height: 30px !important;
-            margin: 1rem 2rem;
+            width: 30px;
+            height: 20px !important;
+            margin: 1rem 3rem;
         }
     }
 }
