--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -11,22 +11,27 @@
     grid-template-columns: repeat(12, 1fr);
     gap: 1rem;
 
+    font-family: PangramRoundedNarrowSemibold;
+
     div {
         margin-bottom: 7vh;
     }
 
-    // .html-content{
+    // .html-content {
     //     grid-column: 4/11;
-
-    // }
-
-    // h1, h2{
-    //     grid-column: 1/3;
-
+        
+    //     ul{
+    //         li{
+    //             font-size: 4rem;
+    //         }
+    //     }
     // }
 
     .description {
-        // font-family: Kleukens;
+        p{
+            font-family: PangramRoundedNarrowSemibold;
+            
+        }
         // grid-column: 4/12;
         margin-bottom: 0rem;
     }
@@ -71,6 +76,7 @@
             list-style-type: circle;
             list-style-position: inside;
             margin: 0rem 0rem;
+            font-family: PangramRoundedNarrowSemibold;
         }
     }
 
@@ -78,8 +84,9 @@
         color: rgb(0, 0, 0);
         // text-decoration: underline;
         background-color: rgb(149, 158, 255);
-        padding: 0.3rem 1rem;
+        padding: 0.5rem 1rem;
         border-radius: 3rem;
+        font-family: PangramRoundedNarrowSemibold;
     }
 
 }
@@ -87,16 +94,25 @@
 @media screen and (min-width: 720px) {
     .about-page {
 
+        
         .html-content {
             grid-column: 4/11;
+            
+            ul{
+                li{
+                    font-size: 3rem;
+                    line-height: 4rem;
+                    list-style-type: disc;
+                }
+            }
         }
 
         .description {
-            grid-column: 4/11;
+            grid-column: 4/12;
 
             p {
-                font-size: 3rem;
-                line-height: 3.5rem;
+                font-size: 4rem;
+                line-height: 3.9rem;
             }
         }
 
