--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -14,6 +14,26 @@
 }
 
 @font-face {
+   font-family: PangramRoundedBold;
+   src: url('../assets/fonts/PPPangram/PPPangramSansRounded-CondensedBold.woff2');
+}
+
+@font-face {
+   font-family: PangramRoundedBoldItalic;
+   src: url('../assets/fonts/PPPangram/PPPangramSansRounded-CondensedBoldItalic.woff2');
+}
+
+@font-face {
+   font-family: PangramRoundedNarrowSemibold;
+   src: url('../assets/fonts/PPPangram/PPPangramSansRounded-NarrowSemibold.woff2');
+}
+
+@font-face {
+   font-family: PangramRoundedCompactRegular;
+   src: url('../assets/fonts/PPPangram/PPPangramSansRounded-CompactRegular.woff');
+}
+
+@font-face {
    font-family: "PPAgrandir";
    src: url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2-variations"),
         url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2 supports variations");
