--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -449,6 +449,7 @@
                    justify-content: flex-end;
                    margin-top: auto;
                    grid-column: 2;
+                   width: auto;
                    //    margin-top: 25rem;
                }
 
@@ -512,6 +513,7 @@
                    //    margin-top: 25rem;
                    img {
                        height: max-content;
+                       width: auto;
                    }
                }
 
