--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -25,7 +25,7 @@
             // font-weight: 500;
             // font-stretch: 275%;
             li{
-                margin-top: 0.75rem;
+                margin-top: 0.5rem;
             }
         }
 
@@ -62,6 +62,10 @@
         
         #studio{
             font-family: PangramRoundedBoldItalic;
+        }
+
+        #contact{
+            padding: 0.2rem 0.75rem;
         }
     }
 
