--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -19,6 +19,9 @@
     
     &:hover {
         // background-color: rgb(0,0,0,0.06);
+        // filter: drop-shadow(0px 0px 30px rgba(68, 180, 68, 1));
+        // background: radial-gradient(circle, rgba(68,180,68,1) 0%, rgba(0,212,255,0) 100%);
+
         // border: 1px solid rgb(68, 180, 68);
 
         h1, p {
