--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -342,10 +342,11 @@
 
             .cover-image{
                 // grid-column: span 8;
-                height: 70vh;
+                height: 60vh;
 
                 img, video{
-                    height: 70vh;
+                    // height: 70vh;
+                    // width: auto;
                 }
 
                 .carousel{
