--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -87,6 +87,7 @@
         background-color: rgb(149, 158, 255);
         padding: 0.5rem 1rem;
         border-radius: 3rem;
+        box-decoration-break: clone;
         font-family: PangramRoundedNarrowSemibold;
     }
 
