--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,6 +10,7 @@
         // padding: 2rem 0rem;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
+        overflow:visible;
         // gap: 2rem 0rem;
 
         .vibes-swiper {
