--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -98,6 +98,7 @@
             min-width: 50vw;
             // min-width: 50vw;
             min-height: 55vh;
+            max-height: 55vh;
 
             // width: 100%;
             border-radius: 0rem;
@@ -290,6 +291,9 @@
     }
 }
 
+@media screen and (max-width: 720px) {
+
+}
 
 @media screen and (max-width: 720px) {
     .work {
