--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -98,7 +98,7 @@
             min-width: 50vw;
             // min-width: 50vw;
             min-height: 55vh;
-            max-height: 55vh;
+            max-height: 58vh;
 
             // width: 100%;
             border-radius: 0rem;
@@ -291,7 +291,7 @@
     }
 }
 
-@media screen and (max-width: 720px) {
+@media screen and (min-width: 720px) {
 
 }
 
@@ -311,6 +311,11 @@
             .cover-image {                
                 width: 100vw;
                 height: 45vh;
+
+                img, video{
+                    max-width: 100vw;
+
+                }
             }
 
             .project-description {
