--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 .index-page {
     // width: 100vw;
     // padding-top: 6rem; 
+    // padding-bottom: 10vh;
 
     .top-space {
         height: 8vh;
