--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -425,6 +425,22 @@
     .image-section {
         display: block;
         grid-column: 1/13 !important;
+
+        #hand{
+            position: relative;
+            right: -72vw;
+            justify-self: flex-end;
+            margin-right: auto;
+            
+            width: 40px;
+            height: 40px;
+            margin-top: -8rem;
+            
+            img{
+                margin-top: -8rem;
+                width: 40px;
+            }
+        }
     }
 
     .blog-swiper{    
