--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -472,12 +472,14 @@
            }
        }
 
-       .deep-sea-bots {
-           .postcover {
-               .cover-image {
-                   border-radius: 25vw;
-                   overflow: hidden;
-
+       .space{
+           .deep-sea-bots {
+               .postcover {
+                   .cover-image {
+                       border-radius: 25vw;
+                       overflow: hidden;
+    
+                   }
                }
            }
        }
