--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -392,7 +392,7 @@
         max-width: 3rem;
        max-height: 5rem;
         // height: 40px !important;
-        margin: 0rem 1rem;
+        margin: 1rem 1rem;
     }
 }
 
@@ -406,7 +406,7 @@
 }
 
 .swiper-button-next {
-    cursor: url('arrow.png'), auto;	
+    cursor: url('arrow-right.png'), auto;	
     // transform-origin: center;
     justify-content: flex-end;
 }
