--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -45,7 +45,7 @@
     }
 
     p {
-        font-family: Kleukens;
+        font-family: PangramSansRegular;
         // font-family: Helvetica, sans-serif;
         font-size: 1.5rem;
         line-height: 1.8rem;
