--- a/src/styles/space.scss
+++ b/src/styles/space.scss
@@ -495,7 +495,7 @@
            .postcover {
                height: 60vh;
                display: grid;
-               grid-template-columns: auto auto auto;
+               grid-template-columns: 1fr auto 1fr;
                overflow: hidden;
 
                .title-img {
