--- a/src/styles/typo.scss
+++ b/src/styles/typo.scss
@@ -39,6 +39,11 @@
 }
 
 @font-face {
+   font-family: Inter;
+   src: url('../assets/fonts/InterDisplay-Regular.woff2');
+}
+
+@font-face {
    font-family: "PPAgrandir";
    src: url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2-variations"),
         url('../assets/fonts/PPAgrandir/PPAgrandir-Variable.woff2') format("woff2 supports variations");
