--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -168,9 +168,9 @@
 
     #hand{
         position: relative;
-        right: -42vw;
+        right: -80%;
         justify-self: flex-end;
-        margin-right: auto;
+        margin-left: auto;
         
         width: 70px;
         height: 70px;
